# Year1

./: README.md
ProjectAssignment1/Football_League/: CMakeLists.txt  League.cpp  League.h  README  Team.cpp  Team.h  main.cpp
ProjectAssignment1/Recursive_Functions/: CMakeLists.txt  README  main.cpp
ProjectAssignment2/MyString/: CMakeLists.txt  MyString.cpp  MyString.h  README  main.cpp
ProjectAssignment2/StackDate/: CMakeLists.txt  Date.cpp  Date.h  README  StackDate.cpp  StackDate.h  main.cpp
ProjectAssignment3/Truck_Company/: CMakeLists.txt  Delivery.cpp  Delivery.h  Director.cpp  Director.h  Driver.cpp  Driver.h  Employee.cpp  Employee.h  Mechanic.cpp  Mechanic.h  README  main.cpp
ProjectAssignment3/University_Database/: Article.cpp  Article.h  CMakeLists.txt  Course.cpp  Course.h  Lecturer.cpp  Lecturer.h  REAME  Researcher.cpp  Researcher.h  Teacher.cpp  Teacher.h  Worker.cpp  Worker.h  main.cpp
ProjectAssignment4/Template_Class/: CMakeLists.txt  Person.cpp  Person.h  README  Set.h  main.cpp
ProjectAssignment4/Template_Function/: CMakeLists.txt  REAME  main.cpp
